Fix spacing issue between album cover and titles

--- a/src/app/release/release-notes/release-notes.component.scss
+++ b/src/app/release/release-notes/release-notes.component.scss
@@ -62,6 +62,7 @@ h5 {
 
 .dialog-header {
     height: 10%;
+    margin: 10px;
 }
 
 .note-container {
